src/test/resources/Parser/SyntaxErrors/FieldIdentifierCollision.front
class A:
    a: A;
    a: int32;